# wt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  _wt.sh  dev.sh  install.sh  manifest.toml  test.sh  worktree.sh  wt.toml
.claude/: settings.json
.claude/commands/: check.md  draft.md  issues.md  review.md  spawn.md
.github/workflows/: release.yml  test.yml
commands/: review.md
crates/wt-cli/: Cargo.toml
crates/wt-cli/src/: cli.rs  main.rs
crates/wt-cli/src/commands/: attach.rs  config.rs  create.rs  exit.rs  health.rs  init.rs  kill.rs  list.rs  merge.rs  mod.rs  open.rs  ps.rs  remove.rs  review.rs  shell_init.rs  spawn.rs  status.rs  tui.rs  update.rs  version.rs  which.rs
crates/wt-core/: Cargo.toml
crates/wt-core/src/: config.rs  error.rs  git.rs  lib.rs  session.rs  spawn.rs  state.rs  terminal.rs  worker.rs  worktree.rs
crates/wt-tui/: Cargo.toml
crates/wt-tui/src/: app.rs  main.rs  ui.rs
docs/: index.md  issue-tracking.md  spawn-architecture.md  spawn-workflow-guide.md
docs/usage/: configuration.md  init.md  orchestration.md  shell-integration.md  worktrees.md
docs/wiki/: _config.yml  index.md
docs/wiki/getting-started/: init.md  installation.md  shell-integration.md
docs/wiki/usage/: configuration.md  worktrees.md
lib/: config.sh  epic.sh  init.sh  linear.sh  setup.sh  spawn.sh  tmux.sh
shell/: wt-rust.bash  wt.bash  wt.zsh
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  spawn.rs  terminal.rs
src/commands/: attach.rs  completions.rs  config.rs  create.rs  exit.rs  health.rs  init.rs  kill.rs  list.rs  merge.rs  mod.rs  open.rs  ps.rs  remove.rs  review.rs  spawn.rs  status.rs  update.rs  version.rs  which.rs
src/core/: config.rs  git.rs  mod.rs  state.rs  tmux.rs  worktree.rs
src/output/: table.rs
src/protocol/: mod.rs  status.rs  task.rs
templates/: CLAUDE.md  wt.toml
templates/claude/: settings.json
templates/claude/skills/docs/: SKILL.md
templates/claude/skills/draft/: SKILL.md
templates/claude/skills/issues/: SKILL.md
templates/claude/skills/review/: SKILL.md
templates/claude/skills/wt/: SKILL.md
templates/commands/: check.md  draft.md  review.md
templates/docs/: contributing.md  index.md  product.md
templates/issues/: _template.md
tests/: integration_tests.rs  test_epic.sh  test_exit.sh  test_open_all.sh  test_spawn.sh
wiki/getting-started/: init.md
wiki/philosophy/: index.md
wiki/usage/: configuration.md  worktrees.md
