[package]
name = "wt"
version = "0.3.0"
edition = "2021"
description = "Git worktree manager for parallel Claude Code sessions"
repository = "https://github.com/amiller68/worktree"
license = "MIT"
readme = "README.md"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
glob = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
which = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
