[package]
name = "wt"
version = "2.0.0"
edition = "2021"
description = "Agent-agnostic git worktree orchestration for parallel development workflows"
repository = "https://github.com/amiller68/wt"
license = "MIT"
keywords = ["git", "worktree", "cli", "agent", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Output
comfy-table = "7"
console = "0.15"
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
directories = "5"
glob = "0.3"
which = "7"
md5 = "0.7"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "wt"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
