[package]
name = "wt-cli"
description = "CLI for wt - git worktree manager for parallel Claude Code sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
wt-core.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glob.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process"] }

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
