[package]
name = "wt-core"
description = "Core library for wt - worktree operations, state, git, config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
glob.workspace = true
sha2.workspace = true
which.workspace = true
handlebars.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
