[package]
name = "wt-tui"
description = "TUI for wt - visual dashboard for managing Claude Code sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wt-tui"
path = "src/main.rs"

[dependencies]
wt-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
